[WiP] FRAM protocols and protocol chain.
[WiP] Workload analyzer. IMPORTANT! This only works with a patched HSQLDB. HSQLDB has to have the implementation of `getGeneratedKeys()` with the HSQLDB-specific `RETURN_PRIMARY_KEY` constant and this also needs to work for tables without a primary key; then returning the complete accessed row.
(This repo includes a patched HSQLDB.jar until this functionality is present in an official release of HSQLDB.)
The collection of the records works for YCSB and TPC-C (excl. the StockLevel transaction) using the `PASS_THROUGH` protocol.

IMPORTANT! These changes break other protocols.

ClusterUtils: Simplify the process of returned results.

SqlNodeUtils: Simplify processing of `SqlNode`s.

CatalogUtils: Simplify access to information stored in the catalog.

LocalNode: Add the affected primary keys via calling `getGeneratedKeys()` to the execution result.

JdbcXAMeta, XAMeta, Meta, RemoteMeta, Cluster, and all Protocols: Add function `getGeneratedKeys()` and the integer array variants of `prepare(String, int[])` and `execute(String, int[])`.

StandaloneDistributionMeta: Overwrite the max rows with infinite.

Upgrade gradle to 6.5.1

HUGE thanks go to Fred Toussi from HSQLDB!

--- a/build.gradle
+++ b/build.gradle
@@ -124,6 +124,9 @@ repositories {
     mavenCentral()
     jcenter()
     maven { url 'https://nexus.dmi.unibas.ch/repository/maven2/' }
+    flatDir {
+        dirs 'lib'
+    }
 }
 
 
@@ -147,7 +150,7 @@ dependencies {
     standaloneImplementation group: 'org.apache.calcite', name: 'calcite-core', version: calciteVersion
     standaloneImplementation group: 'org.apache.calcite', name: 'calcite-server', version: calciteVersion
     // HSQLDB (BSD)
-    standaloneImplementation group: 'org.hsqldb', name: 'hsqldb', version: '2.5.0'
+    standaloneImplementation name: 'hsqldb-2.5.2-SNAPSHOT'
     // Log4j (Apache 2.0)
     standaloneImplementation group: 'org.apache.logging.log4j', name: 'log4j-slf4j-impl', version: log4jVersion
     standaloneImplementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: log4jVersion
