--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -135,6 +135,32 @@ standalone {
             # The default is 20592.
             port = 20592
         }
+
+        getGeneratedKeys {
+            ##
+            # If the store implements the return of primary keys or the return of specified columns for
+            # INSERT, UPDATE, DELETE, and SELECT.
+            # The default is "true"
+            implemented_for_dmql = true
+
+            ##
+            # Works only for patched HSQLDB
+            # Possible values: "RETURN_PRIMARY_KEY", "RETURN_GENERATED_KEYS_COL_INDEXES"
+            # The default is "RETURN_PRIMARY_KEY"
+            return_primary_key_for_dml = "RETURN_PRIMARY_KEY"
+
+            ##
+            # Works only for patched HSQLDB
+            # Possible values: "RETURN_PRIMARY_KEY", "RETURN_GENERATED_KEYS_COL_INDEXES"
+            # The default is "RETURN_PRIMARY_KEY"
+            return_primary_key_for_dql = "RETURN_PRIMARY_KEY"
+
+            ##
+            # Works only for patched HSQLDB.
+            # Possible values: "RETURN_PRIMARY_KEY", "RETURN_GENERATED_KEYS_COL_INDEXES"
+            # The default is "RETURN_PRIMARY_KEY"
+            tables_without_primary_key = "RETURN_PRIMARY_KEY"
+        }
     }
 
 
