--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -27,6 +27,12 @@ cluster {
     # The name of the default (standard) cluster
     # The default is "Polypheny-FRAM".
     name = "Polypheny-FRAM"
+
+    ##
+    # The number of seconds which have to pass before a timeout occurs.
+    # The special value "0" disables timeouts.
+    # The default is 900 s = 15 minutes
+    requestTimeout_seconds = 900
 }
 
 ##
@@ -35,7 +41,13 @@ fram {
     ##
     # The default protocol. One of "PASS_THROUGH", "ROWA", "HASH_FRAGMENTATION".
     # The default is "PASS_THROUGH".
-    defaultProtocol = "PASS_THROUGH"
+    #defaultProtocol = "PASS_THROUGH"
+    defaultProtocol = "FRAM"
+
+    ##
+    # Whether the workload analyzer should analyze batches (executeBatch) or not.
+    # The default is "false"
+    analyzeBatches = false
 }
 
 
